tests/out/error/index/range_indexes.in.bt
arr := [1, 2, 3]
_ = arr["a"..1]
_ = arr[1..`b`]
